// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 test fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 test fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`overrides Drawer.Disclosure.css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8:focus {
  outline: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-4 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-0 {
  background-color: red;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-4 emotion-2 emotion-3 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`overrides Drawer.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-7 {
  background-color: red;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-6 {
  background-color: red;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`props should render correctly for an invisible overlay 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    hidden=""
    id="test"
    role="dialog"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
      hidden=""
      style="display: none;"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`props should render correctly for full screen 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
  width: 100%;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-9 {
  background-color: #574feb !important;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-9 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    hidden=""
    id="test"
    role="dialog"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
      hidden=""
      style="display: none;"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`props should render correctly without backdrop 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-4 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-4:focus {
  outline: none;
}

.emotion-3 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-3.emotion-3 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    hidden=""
    id="test"
    role="dialog"
    style="display: none;"
    tabindex="-1"
  >
    This is a side overlay
  </div>
</div>
`;

exports[`theming Drawer.Disclosure.css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8:focus {
  outline: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-4 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-0 {
  background-color: red;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-7 emotion-8 emotion-2 emotion-3 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-4 emotion-2 emotion-3 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;

exports[`theming Drawer.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-7 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
}

@media screen and (max-width:320px) {
  .emotion-7 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-7 {
  background-color: red;
}

.emotion-6 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-6.emotion-6 {
  position: fixed;
  background-color: white;
  left: 0;
  height: 100vh;
}

.emotion-6 {
  background-color: red;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure fp-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-6 emotion-7 emotion-1 emotion-2 fp-Box fp-Drawer fp-Modal"
    data-dialog="true"
    id="test"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    This is a side overlay
  </div>
</div>
`;
